--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -12,9 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Alimer.Bindings.SDL" Version="3.5.4" />
+    <PackageReference Include="K4os.Compression.LZ4" Version="1.3.8" />
     <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
-    <PackageReference Include="Vortice.D3DCompiler" Version="3.5.0" />
     <PackageReference Include="Vortice.Direct3D11" Version="3.5.0" />
     <PackageReference Include="Vortice.DirectX" Version="3.5.0" />
     <PackageReference Include="Vortice.DXGI" Version="3.5.0" />
@@ -22,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="res\Content.bcf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="res\startup.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
