--- a/GTool.CB/GTool.CB.csproj
+++ b/GTool.CB/GTool.CB.csproj
@@ -10,6 +10,15 @@
 
   <ItemGroup>
     <PackageReference Include="K4os.Compression.LZ4" Version="1.3.8" />
+    <PackageReference Include="RectpackSharp" Version="1.2.0" />
+    <PackageReference Include="SpaceWizards.SharpFont" Version="1.0.2" />
+    <PackageReference Include="Vortice.D3DCompiler" Version="3.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="freetype6.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
