--- a/GTool/GTool.Core/GTool.csproj
+++ b/GTool/GTool.Core/GTool.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="K4os.Compression.LZ4" Version="1.3.8" />
+    <PackageReference Include="RectpackSharp" Version="1.2.0" />
     <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Vortice.D3DCompiler" Version="3.5.0" />
